отредактировать файл index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_1_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -87,7 +87,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
@@ -118,7 +117,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_2_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -139,7 +138,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
@@ -167,7 +165,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_3_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -188,7 +186,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
@@ -219,7 +216,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_4_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -240,7 +237,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
@@ -270,7 +266,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_5_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -291,7 +287,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
@@ -318,7 +313,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_6_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -339,7 +334,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
@@ -367,7 +361,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_7_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -388,7 +382,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
@@ -419,7 +412,7 @@
             </p>
           </div>
           <div class="card-buttons">
-            <button aria-labelledby="article_8_like-button" type="button" class="card__icon-button">
+            <button type="button" class="card__icon-button">
               <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <g class="heart">
@@ -440,7 +433,6 @@
               <button type="button" class="button card__like-button">
                 <span class="button__text">Like</span>
               </button>
-            </button>
           </div>
         </arlicle>
       </li>
